2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to feature #16420: [linkvalidator] Fix fatal error in class.tx_linkvalidator_modfunc1.php
	* Added feature #16420: Add link validator extension (Thanks to Patrick Gaumond)

2010-11-17  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16382: Optimize stdWrap usage for TypoScript content element MULTIMEDIA (Thanks to Jo Hasenau)
	* Added feature #16381: Optimize stdWrap usage for TypoScript content element MEDIA (Thanks to Jo Hasenau)
	* Fixed bug #16435: Headers in GridView are rendered wrong
	* Follow-up to #16315: fixed an issue in ext_conf_template with mod menu
	* Fixed bug #16434: GridView does not show cells if they are not mapped to any column
	* Added feature #16334: Make FlexForms editable via TSConfig and group access lists (Thanks to Kai Vogel)
	* Fixed bug #16320: Prepare userauthgroup to support custom staging (Thanks to Tolleiv Nietsch)
	* Fixed bug #16436: Call to undefined method SC_mod_tools_em_index::uploadExtensionToTER()

2010-11-17  Jochen Rau  <jochen.rau@typoplanet.de>

	* Added feature #16395: Add basic support for RDFa in core (semantic web)

2010-11-17  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #14449: Deprecate usage of ImageMagick version 4 and 5

2010-11-17  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #16027: Let typolink honour secure filelink configuration
	* Added feature #16437: Introduce a form protection API (Thanks to the Security Team: Oliver Klee, Helmut Hummel)
	* Added feature #16439: Use the form protection API to implement the CSRF protection in user setup and install tool (Thanks to the Security Team: Oliver Klee, Helmut Hummel)
	* Added feature #11103: Improve advanced_htaccess and make it more compatible (Thanks to Christopher Stelmaszyk)
	* Added feature #11916: New TYPO3_DB method for queries that expect just a single result row: exec_SELECTgetSingleRow (Thanks to Jo Hasenau)

2010-11-17  Benjamin Mack  <benni@typo3.org>
